canviant urls en lessons i logotip

--- a/_layouts/lessons.html
+++ b/_layouts/lessons.html
@@ -15,7 +15,7 @@
 
     <div class="contenidor-cursos">
       <div class="header-logo">
-        <a href=" {{site.url}}"><img src="{{ site.siteimage }}" alt="{{ site.title }}" class=logo></a>
+        <a href="{{page.default}}"><img src="{{ site.siteimage }}" alt="{{ site.title }}" class=logo></a>
         <p>{{ page.index }}</p>
       </div>
       <div class="navegacio">
