canviant urls en lessons i logotip

--- a/_layouts/lessons.html
+++ b/_layouts/lessons.html
@@ -15,7 +15,8 @@
 
     <div class="contenidor-cursos">
       <div class="header-logo">
-        <a href="{{page.default}}"><img src="{{ site.siteimage }}" alt="{{ site.title }}" class=logo></a>
+        <a href="{{page.default}}"><img src="https://iiioxoiii.github.io/video-classroom-fp/images/vuemastery.svg
+" alt="{{ site.title }}" class=logo></a>
         <p>{{ page.index }}</p>
       </div>
       <div class="navegacio">
@@ -68,7 +69,7 @@
                 <div class="temps-bloc">
                   <div class="icon-temps">
                     <div id="rellotge">
-                      <img src="/images/clock.svg">
+                      <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="#000" xmlns:v="https://vecta.io/nano"><circle cx="12" cy="12" r="10" fill-opacity="0" opacity=".83" stroke-width="1.9"/><path d="M11.727 4.888v7.37l4.886 2.457" opacity=".83" fill="none" stroke-width="1.864"/></svg>
                     </div>    
                   </div>
                   <div class="temps-text">
