canviant urls en lessons i logotip

--- a/_layouts/lessons.html
+++ b/_layouts/lessons.html
@@ -15,7 +15,8 @@
 
     <div class="contenidor-cursos">
       <div class="header-logo">
-        <a href="{{page.default}}"><img src="https://iiioxoiii.github.io/video-classroom-fp/images/vuemastery.svg
+        <a href="{{page.default}}">
+          <img src="https://iiioxoiii.github.io/video-classroom-fp/images/vuemastery.svg
 " alt="{{ site.title }}" class=logo></a>
         <p>{{ page.index }}</p>
       </div>
@@ -134,8 +135,11 @@
 
     <div class="footer">
         <div class="caixa-contate">
-        <div class="footer-logo">
-      <img id="logo-footer" src="{{ site.siteimage }}" alt="{{ site.title }}">  
+          <div class="footer-logo">
+            <a href="{{page.default}}">
+          <img src="https://iiioxoiii.github.io/video-classroom-fp/images/vuemastery.svg
+" alt="{{ site.title }}" class=logo></a>
+        
         <div class="text-caixa-contacte" >
             {{ site.author }}
         </div>
