--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -16,7 +16,7 @@ url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700;900&d
     display: grid;
     grid-gap: 0px;
     grid-template-columns: 1fr 1fr 1fr 400px;
-    grid-template-rows: 100px 680px auto 100px 300px; 
+    grid-template-rows: 100px 680px auto 100px; 
 }
 
 
