Amb video a about

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
     <div class="footer">
       <div class="caixa-contate">
         <div class="footer-logo">
-      <img id="logo-footer" src="{{ site.url }}{{ site.baseurl }}{{ site.siteimage }}" alt="{{ site.title }}">  
+      <img id="logo-footer" src="{{ site.baseurl }}{{ site.siteimage }}" alt="{{ site.title }}">  
 
       <div class="text-caixa-contacte" >
           {{ site.author }}
