Amb link logo i url-home

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 
     <div class="contenidor-cursos">
       <div class="header-logo">
-        <a href="{{ site.url }}"><img src="{{ site.baseurl }}{{ site.siteimage }}" alt="{{ site.title }}" class=logo></a>
+        <a href="{{ site.url-home }}"><img src="{{ site.baseurl }}{{ site.siteimage }}" alt="{{ site.title }}" class=logo></a>
         <p>{{ page.index }}</p>
 
       </div>
